fix(modal): Adjust CSS to prevent dropdown cutoff (#3078)
fix(modal): Adjust CSS to prevent cutoff

--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -163,6 +163,7 @@
         }
 
         .modal-content {
+            flex-basis: 100%;
             margin-top: $responsive-modal-header-height;
             margin-bottom: $responsive-modal-actions-height;
             padding: 24px 16px 12px 16px;
@@ -193,11 +194,14 @@
             padding: 10px 16px;
             background-color: $white;
         }
+
+        .modal-dialog-container {
+            overflow: hidden;
+        }
     }
 
     .modal-dialog-container {
         flex-basis: 100%;
         width: 100%;
-        overflow: hidden;
     }
 }
